[gd_scene load_steps=24 format=2]

[ext_resource path="res://Entity/EntityBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://AR_Mob/ARMob.png" type="Texture" id=2]
[ext_resource path="res://AR_Mob/Exclamation/2.png" type="Texture" id=3]
[ext_resource path="res://AR_Mob/Exclamation/3.png" type="Texture" id=4]
[ext_resource path="res://AR_Mob/Exclamation/1.png" type="Texture" id=5]
[ext_resource path="res://AR_Mob/Exclamation/4.png" type="Texture" id=6]
[ext_resource path="res://AR_Mob/AR_Mob.gd" type="Script" id=7]
[ext_resource path="res://AR_Mob/Question/3.png" type="Texture" id=8]
[ext_resource path="res://AR_Mob/Question/2.png" type="Texture" id=9]
[ext_resource path="res://AR_Mob/Question/4.png" type="Texture" id=10]
[ext_resource path="res://AR_Mob/Question/1.png" type="Texture" id=11]
[ext_resource path="res://AR_Mob/hurtbox.gd" type="Script" id=12]
[ext_resource path="res://AR_Mob/grunt-death.ogg" type="AudioStream" id=13]
[ext_resource path="res://Player/gun_firing.ogg" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.08343, 11.6339 )

[sub_resource type="GDScript" id=2]
script/source = "extends Area2D

export(String) var hit_area = \"front\"
export(int) var damage_multiplier = 1

func hit(incoming_damage: int) -> void:
	var _owner = get_owner()
	_owner.death_direction = hit_area
	_owner.get_health().take_damage(incoming_damage * damage_multiplier)
"

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.32252, 13.4708 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.59781, 13.4708 )

[sub_resource type="Animation" id=5]
resource_name = "die"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 13 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("VisibilityEnabler2D:pause_animations")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}

[sub_resource type="Animation" id=7]
length = 1.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.01 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shoot:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 12, 13, 14, 15, 16, 17, 18 ]
}

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "alert",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "question",
"speed": 8.0
} ]

[node name="AR_Mob" instance=ExtResource( 1 )]
collision_layer = 0
script = ExtResource( 7 )

[node name="Health" parent="." index="0"]
hp_max = 20
hp = 20

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, -11.7884 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="2"]
position = Vector2( 0, -17.4614 )
texture = ExtResource( 2 )
hframes = 24
frame = 3

[node name="pivoit" type="Node2D" parent="." index="3"]

[node name="PlayerRaycast" type="RayCast2D" parent="pivoit" index="0"]
position = Vector2( 0, -17.2612 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="FloorChecker" type="RayCast2D" parent="pivoit" index="1"]
position = Vector2( 8.12945, -14.4771 )
cast_to = Vector2( 0, 20 )

[node name="backChecker" type="RayCast2D" parent="pivoit" index="2"]
position = Vector2( 0, -17 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="shootPoint" type="Position2D" parent="pivoit" index="3"]
position = Vector2( 11.5789, -17.3241 )

[node name="Hitbox" type="Area2D" parent="pivoit" index="4"]
collision_layer = 8
collision_mask = 0
script = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivoit/Hitbox" index="0"]
modulate = Color( 1, 0, 0.329412, 1 )
position = Vector2( 1.96863, -13.5784 )
shape = SubResource( 3 )

[node name="Hitbox_back" type="Area2D" parent="pivoit" index="5"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 12 )
hit_area = "back"
damage_multiplier = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivoit/Hitbox_back" index="0"]
position = Vector2( -5.98463, -13.5784 )
shape = SubResource( 4 )

[node name="AnimationPlayer" parent="." index="4"]
autoplay = "idle"
anims/die = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/shoot = SubResource( 7 )
anims/walk = SubResource( 8 )

[node name="Bubble" type="AnimatedSprite" parent="." index="5"]
visible = false
position = Vector2( 7.12719, -29.2883 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 9 )
animation = "alert"

[node name="BubbleTimer" type="Timer" parent="." index="6"]
wait_time = 1.5
one_shot = true

[node name="Label" type="Label" parent="." index="7"]
visible = false
margin_left = -40.4861
margin_top = 2.55907
margin_right = 40.5139
margin_bottom = 16.5591
text = "HELLO"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="8"]

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="9"]
position = Vector2( 0.494509, -13.5442 )
scale = Vector2( 0.883069, 1.44097 )
process_parent = true
physics_process_parent = true

[node name="Shoot" type="AudioStreamPlayer2D" parent="." index="10"]
stream = ExtResource( 14 )
